# zpa-collector

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
collector/: __init__.py  __main__.py  app.py  classify.py  cli.py  config.py  config_sync.py  counters.py  db.py  fields.py  health.py  httpd.py  oneapi.py  receiver.py  selftest.py  synth_sender.py
collector/static/: index.html
tests/: conftest.py  test_app.py  test_classify.py  test_cli.py  test_config.py  test_config_sync.py  test_counters.py  test_db.py  test_fields.py  test_health.py  test_httpd.py  test_oneapi.py  test_receiver.py  test_selftest.py  test_synth_sender.py
tests/fixtures/: sample_lines.py
