[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zpa-collector"
version = "0.1.0"
description = "Stdlib-only ZPA LSS hygiene collector (count-and-drop usage vs read-only OneAPI config)."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ivan Currey"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "cryptography>=41"]

[tool.setuptools.packages.find]
include = ["collector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
